--- a/aiapp/pubspec.yaml
+++ b/aiapp/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   image_picker: ^0.8.5+3
   http: ^0.13.5
   video_player: ^2.2.10  
+  audioplayers: ^1.0.1
   
   
 
@@ -67,7 +68,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/sound.mp3
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
